# libkatherine

./: CMakeLists.txt  Doxyfile  README.md
include/: unistd.h
include/katherine/: KatherineConfigParser.h  MultiplattformNetwork.h  MultiplattformTypes.h  device.h  katherine.h  udp.h
src/: KatherineConfigParser.cpp  acquisition.c  config.c  status.c  udp.c
